--- a/Lectures/1_intro.html
+++ b/Lectures/1_intro.html
@@ -40,21 +40,21 @@ class: center, middle, inverse, title-slide
 
 
 
-# Agenda
+&lt;!-- # Agenda --&gt;
 
-1. Course Motivation
+&lt;!-- 1. Course Motivation --&gt;
 
-  - What is data science &amp; why should we care?
+&lt;!--   - What is data science &amp; why should we care? --&gt;
 
-2. Course Objectives
+&lt;!-- 2. Course Objectives --&gt;
 
-  - **Content:** Critical thinking, analysis
+&lt;!--   - **Content:** Critical thinking, analysis --&gt;
 
-  - **Skills:** Computing and analysis in R
+&lt;!--   - **Skills:** Computing and analysis in R --&gt;
 
-3. ChatGPT and data science
-  
-4. Course Expectations &amp; Syllabus review
+&lt;!-- 3. ChatGPT and data science --&gt;
+
+&lt;!-- 4. Course Expectations &amp; Syllabus review --&gt;
 
 ---
 
