--- a/Psets/psc4175_pset_0.html
+++ b/Psets/psc4175_pset_0.html
@@ -9,9 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
+<meta name="author" content="[YOUR NAME]" />
 
 
-<title>psc4175_pset_0.knit</title>
+<title>Problem Set 0</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -348,15 +349,26 @@ display: none;
 
 
 
+<h1 class="title toc-ignore">Problem Set 0</h1>
+<h3 class="subtitle">Practice (not graded)</h3>
+<h4 class="author">[YOUR NAME]</h4>
+<h4 class="date">Due Date: 2025-05-30</h4>
 
 </div>
 
 
+<p>At the top of all problem sets I will have the following statement.
+You should follow the statement with the names of classmates with whom
+you worked and/or upload a PDF of your AI prompt/output.</p>
+<p><strong>If you collaborated with a colleague and/or used AI for any
+help on this problem set, document here.</strong> Write the names of
+your classmates and/or upload a PDF of your AI prompt and output with
+your problem set:</p>
 <div id="problem-set-0-getting-set-up" class="section level2">
 <h2>Problem Set 0: Getting Set Up!</h2>
 <p>The rest of the semester will see you working on data science
-questions using <code>R</code>. As such, your first homework assignment
-is:</p>
+questions using <code>R</code>. As such, your first problem set will
+have you:</p>
 <ol style="list-style-type: decimal">
 <li>Install <code>R</code> on your computer.</li>
 <li>Install <code>RStudio</code> on your computer.</li>
