--- a/Homeworks/psc4175_hw_11.html
+++ b/Homeworks/psc4175_hw_11.html
@@ -351,9 +351,9 @@ display: none;
 
 <h1 class="title toc-ignore">Binary Predictors and Multiple
 Regression</h1>
-<h3 class="subtitle">Homework</h3>
+<h3 class="subtitle">Homework 11</h3>
 <h4 class="author">Prof. Weldzius</h4>
-<h4 class="date">Due Date: 2024-10-28</h4>
+<h4 class="date">Due Date: 2025-06-16</h4>
 
 </div>
 
